Fix build error with new Spark version